# SAM3DBody-cpp

./: .gitignore  CLIENTSERVER.md  CMakeLists.txt  DEPENDENCIES.md  OUTPUT.md  README.md  README_windows.md  WSL.md  body_mhr.bvh  fast_sam_3dbody_dump_dpose_compat_csv.py  fast_sam_3dbody_frontend.py  lafan.bvh  lafan_mhr.bvh  mixamo.bvh  ros_demo_webcam.py  sam3_solve.py
AmMatrix/: CMakeLists.txt  matrix4x4Tools.c  matrix4x4Tools.h  solveHomography.c  solveLinearSystemGJ.c
AmMatrix/OpenCL/: CMakeLists.txt
AmMatrix/TestCPUOptimizedInstructionSet/: CMakeLists.txt  main.c
GraphicsEngine/ModelLoader/: model_loader_transform_joints.c  model_loader_tri.c
GraphicsEngine/MotionCaptureLoader/: bvh_loader.c
GraphicsEngine/MotionCaptureLoader/calculate/: bvh_to_tri_pose.c  smoothing.h
GraphicsEngine/MotionCaptureLoader/edit/: bvh_rename.c
GraphicsEngine/MotionCaptureLoader/import/: fromBVH.c
GraphicsEngine/System/: glx3.c  win32_gl.c  win32_gl.h
GraphicsEngine/TrajectoryParser/: InputParser_C.c
multiview/: CMakeLists.txt  aruco_qr.cpp  aruco_qr_probe.cpp  associate.cpp  associate.h  extrinsics.cpp  extrinsics.h  extrinsics_test.cpp  multiview_frontend.cpp  multiview_frontend.h  sam_3dbody_multiview.cpp  sam_3dbody_sync.cpp  sync_io.cpp  sync_io.h  sync_io_test.cpp
multiview/test_data/: dsc_d7500_4k_18mm.calib
net/: sam_3dbody_net.cpp
render/: default.frag  default.vert  fast_sam_3dbody_render.cpp  offline_sam_3dbody_render.cpp
ros1/: README.md
ros1/poseEstimation3D/: CMakeLists.txt  README.md  initialize.sh  package.xml  run_it.sh  update.sh
ros1/poseEstimation3D/dependencies/: .gitignore  placeholder
ros1/poseEstimation3D/launch/: poseEstimation3D.launch
ros1/poseEstimation3D/src/: main.cpp
scripts/: batch_video.sh  image.sh  offline_video.ps1  offline_video.sh  setup.sh  video.ps1  video.sh  video_gmr.sh  webcam.sh  webcam_gmr.sh  webcam_p.sh
scripts/gmr_configs/: bvh_lafan1pos_to_g1.json
src/: bvh_writer.cpp  bvh_writer.h  cli_common.h  export_macros.h  fast_sam_3dbody.cpp  fast_sam_3dbody.h  fast_sam_3dbody_capi.cpp  fast_sam_3dbody_capi.h  main.cpp  mhr_lbs_cuda.cu  mhr_lbs_cuda.cuh  offline_passes.cpp  offline_passes.h  outputFiltering.h  preprocess.hpp
tests/: test_invariant_solveLinearSystemGJ.c
tools/: check_mesh_bvh_overlay.py  export_backbone_fp16.py  export_backbone_fp32.py  export_libreyolo.py  export_libreyolo.sh  football_tracker.py  gen_lafan_bvh.py  gen_mhr_bvh.py  gen_mixamo_bvh.py  gmr_diag.py  gmr_retarget.py  gmr_solve_offsets.py  gmr_stream.py  project_env.sh  proto_bvh_arm_retarget.py  run_trt.sh  setup_ammarserver.sh  setup_gmr.sh  setup_trt.sh  trt_env.sh
